--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   
   body {
     background: linear-gradient(287.56deg, #c2e9fb 0%, #a1c4fd 100%);
-    font-size: 1.6rem;
+    font-size: 16px;
     display: grid;
     place-items: center;
     height: 100vh;
@@ -21,23 +21,49 @@
   input {
     font-family: 'DM Sans', sans-serif;
   }
+
+  button {
+    background-color: #7879f1;
+    color: white;
+    
+    margin-top: 16px;
+
+    font-weight: bold;
+    
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+
+    transition: background .3s;
+
+  }
+
+  button:hover {
+    background-color: #6363ce;
+  }
+
+  .hide {
+    display: none;
+
+  }
   
   main {
     background: #ffffff;
-    box-shadow: 0px 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
-    border-radius: 0.6rem;
-    padding: 4.8rem 6.4rem 6.4rem;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    padding: 48px 64px 64px;
   
-    width: min(42.8rem, 90%);
-    margin-top: -12rem;
+    width: min(428px, 90%);
+    margin-top: -120px;
   
     text-align: center;
   }
   
+/*screen1*/
+
   h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 2.4rem;
-    margin-bottom: 1.6rem;
+    font-size: 24px;
+    margin-bottom: 16px;
   }
   
   h1,
@@ -50,7 +76,7 @@
   }
   
   form {
-    margin-top: 4.8rem;
+    margin-top: 48px;
     display: flex;
     justify-content: center;
   }
@@ -58,19 +84,24 @@
   input,
   button {
     border: none;
-    padding: 1.6rem;
+    padding: 16px;
   }
   
   input {
     background-color: #dce2e9;
     width: 6rem;
-    border-radius: 0.4rem 0 0 0.4rem;
+    border-radius: 4px 0 0 4px;
   }
   
-  button {
-    background-color: #7879f1;
-    color: white;
-    font-weight: bold;
-    border-radius: 0 0.4rem 0.4rem 0;
-  }
-  
+
+/*screen2*/
+h2 {
+  font-size: 24px;
+  font-weight: normal;
+
+  margin-botton: 33px;
+}
+
+.screen2 button {
+  border-radius: 4px;
+}
