--- a/style.css
+++ b/style.css
@@ -1,107 +1,99 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  :root {
-    font-size: 62.5%;
-  }
-  
-  body {
-    background: linear-gradient(287.56deg, #c2e9fb 0%, #a1c4fd 100%);
-    font-size: 16px;
-    display: grid;
-    place-items: center;
-    height: 100vh;
-  }
-  
-  body,
-  button,
-  input {
-    font-family: 'DM Sans', sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  button {
-    background-color: #7879f1;
-    color: white;
-    
-    margin-top: 16px;
+:root {
+  font-size: 62.5%;
+}
 
-    font-weight: bold;
-    
-    border-radius: 0 4px 4px 0;
-    cursor: pointer;
+body {
+  background: linear-gradient(287.56deg, #c2e9fb 0%, #a1c4fd 100%);
+  font-size: 1.6rem;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
 
-    transition: background .3s;
+body,
+button,
+input {
+  font-family: 'DM Sans', sans-serif;
+}
 
-  }
+button {
+  background-color: #7879f1;
+  color: white;
+  font-weight: bold;
+  border-radius: 0 0.4rem 0.4rem 0;
+  cursor: pointer;
 
-  button:hover {
-    background-color: #6363ce;
-  }
+  transition: background 0.3s;
+}
 
-  .hide {
-    display: none;
+button:hover {
+  background-color: #6363ce;
+}
 
-  }
-  
-  main {
-    background: #ffffff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
-    padding: 48px 64px 64px;
-  
-    width: min(428px, 90%);
-    margin-top: -120px;
-  
-    text-align: center;
-  }
-  
-/*screen1*/
+.hide {
+  display: none;
+}
 
-  h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    margin-bottom: 16px;
-  }
-  
-  h1,
-  p {
-    color: #34355b;
-  }
-  
-  p {
-    opacity: 0.8;
-  }
-  
-  form {
-    margin-top: 48px;
-    display: flex;
-    justify-content: center;
-  }
-  
-  input,
-  button {
-    border: none;
-    padding: 16px;
-  }
-  
-  input {
-    background-color: #dce2e9;
-    width: 6rem;
-    border-radius: 4px 0 0 4px;
-  }
-  
+main {
+  background: #ffffff;
+  box-shadow: 0px 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.6rem;
+  padding: 4.8rem 6.4rem 6.4rem;
 
-/*screen2*/
+  width: min(42.8rem, 90%);
+  margin-top: -12rem;
+
+  text-align: center;
+}
+
+/* Screen 1 */
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.4rem;
+  margin-bottom: 1.6rem;
+}
+
+h1,
+p {
+  color: #34355b;
+}
+
+p {
+  opacity: 0.8;
+}
+
+form {
+  margin-top: 4.8rem;
+  display: flex;
+  justify-content: center;
+}
+
+input,
+button {
+  border: none;
+  padding: 1.6rem;
+}
+
+input {
+  background-color: #dce2e9;
+  width: 6rem;
+  border-radius: 0.4rem 0 0 0.4rem;
+}
+
+/* Screen 2 */
 h2 {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: normal;
 
-  margin-botton: 33px;
+  margin-bottom: 3.3rem;
 }
 
 .screen2 button {
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
